--- a/src/app/features/login/login.html
+++ b/src/app/features/login/login.html
@@ -3,7 +3,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-5 offset-md-7">
                 <div class="login-form">
-                    <img src="/assets/images/Logo.png" alt="" class="logo">
+                    <img src="/assets/images/Logo3.png" alt="" class="logo">
                     <form (ngSubmit)="login()" autocomplete="on">
                         <div class="form-group mt-3">
                             <label for="username">Usuario</label>
