Se agrega gestor y verificador de login

--- a/src/app/features/admin/HojaVida/hoja-vida.html
+++ b/src/app/features/admin/HojaVida/hoja-vida.html
@@ -748,9 +748,12 @@
 
             <div class="card shadow-lg border-0">
                 <div class="card-header bg-gradient-primary text-white">
-                    <div class="d-flex align-items-center">
-                        <i class="fas fa-database me-2"></i>
-                        <h5 class="mb-0">Consulta de Hojas de Vida</h5>
+                    <div class="d-flex align-items-center justify-content-between">
+                        <div class="d-flex align-items-center">
+                            <i class="fas fa-database me-2"></i>
+                            <h5 class="mb-0">Consulta de Hojas de Vida</h5>
+                        </div>
+
                     </div>
                 </div>
 
