--- a/src/app/shared/aside/aside.html
+++ b/src/app/shared/aside/aside.html
@@ -14,6 +14,12 @@
                 usuario</span>
         </a>
 
+        <a class="menu-item d-grid" [class.active]="activePanel === 'registroIps'"
+            (click)="openRegistroIps()">
+            <span class="icon">🏥</span>
+            <span class="text" style="font-size: 1.0rem; text-transform: uppercase;">Registro de IPS</span>
+        </a>
+
         <a class="menu-item d-grid" [class.active]="activePanel === 'hojaVida'" (click)="openHojaVida()">
             <span class="icon">📋</span>
             <span class="text" style="font-size: 1.0rem; text-transform: uppercase;">Hoja de Vida</span>
