--- a/src/app/shared/aside/aside.html
+++ b/src/app/shared/aside/aside.html
@@ -10,19 +10,19 @@
         <a class="menu-item d-grid" [class.active]="activePanel === 'registroUsuarios'"
             (click)="openRegistroUsuarios()">
             <span class="icon">👤</span>
-            <span class="text" style="font-size: 1.0rem; text-transform: uppercase;">Registro de
+            <span class="text" style="font-size: 1.0rem; text-transform: uppercase;">Gestor de
                 usuario</span>
         </a>
 
-        <a class="menu-item d-grid" [class.active]="activePanel === 'registroIps'"
-            (click)="openRegistroIps()">
+        <a class="menu-item d-grid" [class.active]="activePanel === 'gestorIps'"
+            (click)="openGestorIps()">
             <span class="icon">🏥</span>
-            <span class="text" style="font-size: 1.0rem; text-transform: uppercase;">Registro de IPS</span>
+            <span class="text" style="font-size: 1.0rem; text-transform: uppercase;">AdminIPS</span>
         </a>
 
         <a class="menu-item d-grid" [class.active]="activePanel === 'hojaVida'" (click)="openHojaVida()">
             <span class="icon">📋</span>
-            <span class="text" style="font-size: 1.0rem; text-transform: uppercase;">Hoja de Vida</span>
+            <span class="text" style="font-size: 1.0rem; text-transform: uppercase;">Gestor Hoja de Vida</span>
         </a>
 
         <div class="menu-section text-uppercase">Applications</div>
