--- a/src/app/features/admin/gestorIps/gestor-ips.html
+++ b/src/app/features/admin/gestorIps/gestor-ips.html
@@ -2,13 +2,13 @@
     <!-- Pestañas para alternar entre registro y consulta -->
     <ul class="nav nav-tabs mb-4" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-            <button style="color: #69B5D4" class="nav-link" [class.active]="activeTab === 'registro'"
+            <button class="nav-link" [class.active]="activeTab === 'registro'"
                 (click)="setActiveTab('registro')" type="button">
                 <i class="fas fa-hospital-alt"></i> Registro de IPS
             </button>
         </li>
         <li class="nav-item" role="presentation">
-            <button style="color: #69B5D4" class="nav-link" [class.active]="activeTab === 'consulta'"
+            <button class="nav-link" [class.active]="activeTab === 'consulta'"
                 (click)="setActiveTab('consulta')" type="button">
                 <i class="fas fa-search"></i> Consultar IPS
             </button>
