--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -90,6 +90,9 @@
         <!-- Panel Gestor de IPS -->
         <app-gestor-ips *ngIf="activePanel === 'gestorIps'"></app-gestor-ips>
 
+        <!-- Panel IPS Gestion -->
+        <app-ips-gestion *ngIf="activePanel === 'ipsGestion'"></app-ips-gestion>
+
         <!-- Panel Formulario de Hoja de Vida -->
         <app-hoja-vida *ngIf="activePanel === 'hojaVida'"></app-hoja-vida>
     </main>
