--- a/src/app/features/admin/registroUsuarios/registro-usuarios.html
+++ b/src/app/features/admin/registroUsuarios/registro-usuarios.html
@@ -107,10 +107,17 @@
 
                         <div class="col-md-6">
                             <label class="form-label">Empresa *</label>
-                            <input type="text" class="form-control" formControlName="crEmpresa"
-                                [class.is-invalid]="submitted && f['crEmpresa'].invalid">
+                            <select class="form-select" formControlName="crEmpresa"
+                                [class.is-invalid]="submitted && f['crEmpresa'].invalid"
+                                [disabled]="cargandoIps">
+                                <option value="" *ngIf="!cargandoIps">Seleccione una IPS</option>
+                                <option value="" *ngIf="cargandoIps">Cargando IPS...</option>
+                                <option *ngFor="let ips of ips" [value]="ips._id">{{ ips.NOMBRE_IPS }}</option>
+                            </select>
+                            <div class="invalid-feedback" *ngIf="submitted && f['crEmpresa'].invalid">
+                                Debe seleccionar una IPS
+                            </div>
                         </div>
-                        <!-- Campo Estado eliminado -->
                     </div>
                 </div>
             </div>
